[package]
name = "libyaml-rs"
version = "0.2.11"
authors = ["David Tolnay <dtolnay@gmail.com>", "YAML Organization <noreply@yaml.org>"]
categories = ["encoding", "parser-implementations", "no-std"]
description = "libyaml transpiled to rust by c2rust"
documentation = "https://docs.rs/libyaml-rs"
edition = "2021"
keywords = ["yaml"]
license = "MIT"
repository = "https://github.com/yaml/libyaml-rs"
rust-version = "1.60"

[workspace]
[dev-dependencies]
pretty_assertions = "1.0"
libyaml-rs-test-suite = { path = "tests/data" }

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
